<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".PercentActivity">

    <!-- Выдвигающийся список №1 -->

    <TextView
        android:id="@+id/textPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="Расчёт процентов"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPercent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#80FFFFFF"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPercent">

        <LinearLayout
            android:id="@+id/linearPercent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#80FFFFFF"
            android:orientation="vertical"
            android:padding="16dp"
            android:radius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinnerCalculationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/calculation_options"
                android:prompt="@string/select_calculation_option"/>

            <LinearLayout
                android:id="@+id/inputFieldsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinnerCalculationType"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/principalInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:hint="@string/enter_principal" />

                <EditText
                    android:id="@+id/depositInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="0"
                    android:hint="Введите сумму пополнения"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/rateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:hint="@string/enter_rate" />

                <EditText
                    android:id="@+id/timeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:hint="@string/enter_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/calculateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/calculate"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:backgroundTint="#D29F04" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/resultTotal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/resultIncome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-70dp"
        android:gravity="center"
        android:text="Итоговая сумма :"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultIncome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardPercent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="Доход :"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>
</ScrollView>